--- a/deploy/certs.yaml
+++ b/deploy/certs.yaml
@@ -3,7 +3,7 @@ apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
   name: resource-annotator-ca
-  namespace: kubermatic
+  namespace: resource-annotator
 spec:
   selfSigned: {}
 ---
@@ -11,7 +11,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: resource-annotator-certificate
-  namespace: kubermatic
+  namespace: resource-annotator
 spec:
   secretName: resource-annotator-certs
   dnsNames:
