--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -35,6 +35,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: resource-annotator
+  namespace: resource-annotator
   labels:
     app: resource-annotator
 spec:
