feat: match object names

--- a/deploy/configmap.yaml.example
+++ b/deploy/configmap.yaml.example
@@ -11,5 +11,7 @@ data:
       matchKind: Secret
       matchLabels:
         app: test-app
+      # You can also match on names
+      # matchName: objectName
       annotations:
         matched-rule: amazing-rule
